--- a/package.json
+++ b/package.json
@@ -5,21 +5,16 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.4",
     "@apollo/client": "^3.4.10",
-    "@material-ui/core": "^4.9.0",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.40",
-    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "graphql": "^15.5.2",
     "antd": "^4.11.2",
-    "axios": "^0.27.2",
+    "apollo-upload-client": "^17.0.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
-    "immutability-helper": "^3.1.1",
+    "graphql": "^15.5.2",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-inlinesvg": "^3.0.0",
